fixed contrast of contact.html

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ input:focus, textarea:focus {
 }
 
 label {
-    color: #43474d;
+    color: #2b2d31;
 }
 
 #get-in-touch {
